--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>state-machine</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>state-machine-example</name>
+	<name>state-machine-workshop</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -56,6 +56,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.3.3.RELEASE</version>
 			</plugin>
 		</plugins>
 	</build>
